src-tauri/output.txt
    Checking zenith-app v0.1.0 (C:\Projects\FullStack\zenith-app\src-tauri)
warning: unused import: `FieldDescriptor`
 --> src\proto_parser.rs:1:37
  |
1 | use prost_reflect::{DescriptorPool, FieldDescriptor, Kind, MessageDescriptor};
  |                                     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `protox::prost_reflect::prost_types::FileDescriptorSet: prost::Message` is not satisfied
  --> src\proto_parser.rs:40:28
   |
40 |     prost::Message::encode(&file_desc_set, &mut buf)
   |     ---------------------- ^^^^^^^^^^^^^^ the trait `prost::Message` is not implemented for `protox::prost_reflect::prost_types::FileDescriptorSet`
   |     |
   |     required by a bound introduced by this call
   |
note: there are multiple different versions of crate `prost` in the dependency graph
  --> C:\Users\pc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\prost-0.13.5\src\message.rs:17:1
   |
17 | pub trait Message: Debug + Send + Sync {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: C:\Users\pc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\prost-0.14.3\src\message.rs:15:1
   |
15 | pub trait Message: Send + Sync {
   | ------------------------------ this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
help: item with same name found
  --> C:\Users\pc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\prost-types-0.13.5\src\protobuf.rs:6:1
   |
 6 | pub struct FileDescriptorSet {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: there are multiple different versions of crate `prost_types` in the dependency graph
   = help: the following other types implement trait `prost::Message`:
             ()
             Box<M>
             Vec<u8>
             bool
             f32
             f64
             i32
             i64
           and 52 others
   = note: there are multiple different versions of crate `prost_types` in the dependency graph
   = help: you can use `cargo tree` to explore your dependency tree

For more information about this error, try `rustc --explain E0277`.
warning: `zenith-app` (lib) generated 1 warning
error: could not compile `zenith-app` (lib) due to 1 previous error; 1 warning emitted
